fix: caption spacing

--- a/frontend/src/scss/layout/_typography.scss
+++ b/frontend/src/scss/layout/_typography.scss
@@ -55,4 +55,5 @@ h4,
 
 .caption {
 	font-size: $caption;
+	margin-bottom: rem(3);
 }
